--- a/FrontEnd/src/style.css
+++ b/FrontEnd/src/style.css
@@ -1,221 +1,208 @@
-:root{
-    --background:rgb(228, 228, 228);
-    --text-color:black;
-    --top-border:rgb(255, 255, 255);
-    --bottom-border:rgb(201, 201, 201);
-    --left-border:rgb(255, 255, 255);
-    --right-border:rgb(201, 201, 201);
+:root {
+  --background: #818181;
+  --text-color: black;
+  --top-border: rgb(200, 200, 200);
+  --bottom-border: rgb(20, 20, 20);
+  --left-border: rgb(200, 200, 200);
+  --right-border: rgb(20, 20, 20);
 
-    --pressed-top-border:rgb(94, 94, 94);
-    --pressed-bottom-border:rgb(255, 255, 255);
-    --pressed-left-border:rgb(94, 94, 94);
-    --pressed-right-border:rgb(255, 255, 255);
-
-    
+  --pressed-top-border: rgb(20, 20, 20);
+  --pressed-bottom-border: rgb(255, 255, 255);
+  --pressed-left-border: rgb(20, 20, 20);
+  --pressed-right-border: rgb(255, 255, 255);
 }
 
-
-
-body{
-    background-color: var(--background);
-    color: var(--text-color);
-    font-family: 'Roboto', sans-serif;
-    font-size: 2em;
-    margin: 0;
-    padding: 0;
-    align-items: center;
-    justify-content: center;
-    display: flex;
-    overflow: hidden;
+body {
+  background-color: var(--background);
+  color: var(--text-color);
+  font-family: "Roboto", sans-serif;
+  font-size: 2em;
+  margin: 0;
+  padding: 0;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  overflow: hidden;
 }
-
-
 
 @media screen and (max-width: 912px) {
-    .CalcContainer {
-        width: 80% !important;
-        height: 100%;
-    }
+  .CalcContainer {
+    width: 80% !important;
+    height: 100%;
+  }
 }
 @media screen and (max-width: 768px) {
-    .CalcContainer {
-        width: 100% !important;
-        height: 100%;
-    }
-}
-
-.CalcContainer{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 65vw;
-    height: 100vh;
-    background-color: transparent;
-
-}
-
-.displayContainer{
-    width: 96%;
-    height: 20%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: transparent;
-    position: relative;
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    border:none;
-    border-top: 5px solid rgb(179, 179, 179);
-    border-bottom: 5px solid var(--pressed-bottom-border);
-    border-left: 5px solid rgb(119, 119, 119);
-    border-right: 5px solid var(--pressed-right-border);
-
-}
-
-.DisplayExpression{
-    width:98%;
-    height: 30%;
-    z-index: 99;
-    border: black;
-    display: flex;
-    justify-content: flex-end;
-}
-.DisplayResult{
-    width:98%;
-    height: 50%;
-    border: black;
-    z-index: 99;
-    font-size: 34px;
-    display: flex;
-    justify-content: flex-end;
-}
-
-
-.Mcontainer{
-    width: 98%;
-    height: 11%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: transparent;
-    position: relative;
-    
-}
-
-.Mcontainer button{
-    width: 80%;
-    height: 95%;
-    background-color: var(--background);
-    border:none;
-    font-size: 22px;
-    border-top: 4px solid var(--top-border);
-    border-bottom: 4px solid var(--bottom-border);
-    border-left: 4px solid var(--left-border);
-    border-right: 4px solid var(--right-border);
-}
-
-.Mcontainer button:active{
-    border-top: 3px solid var(--pressed-top-border);
-    border-bottom: 3px solid var(--pressed-bottom-border);
-    border-left: 3px solid var(--pressed-left-border);
-    border-right: 3px solid var(--pressed-right-border);
-}
-
-.buttonClass{
-    width: 98%;
-    height: 80%;
-    display: flex;
-    flex-direction: row;
-}
-.primary{
-    width: 100%;
+  .CalcContainer {
+    width: 100% !important;
     height: 100%;
-    display: flex;
-    flex-direction: row;
+  }
 }
 
-.last-column{
-    width: 20%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: top;
-    background-color: transparent;
-    position: relative;
-}
-.col{
-    width: 100%;
-    height: 60%;
-    display: flex;
-    flex-direction: column;
-}
-.equals{
-    width: 100%;
-    height: 40%;
-    bottom: 0;
-}
-.Scontainer{
-width: 100%;
-height: 100%;
-grid-template-columns: repeat(5,1fr);
+.CalcContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 65vw;
+  height: 100vh;
+  background-color: transparent;
 }
 
-.container2{
-    width: 80%;
-    height: 100%;
-    grid-template-columns: repeat(4,1fr);
-    }
-.container2 button:nth-last-child(3){
-    grid-row: 5;
-    grid-column: 1/3;
+.displayContainer {
+  width: 96%;
+  height: 20%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: transparent;
+  position: relative;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  border: none;
+  border-top: 3px solid rgb(179, 179, 179);
+  border-bottom: 3px solid var(--pressed-bottom-border);
+  border-left: 3px solid rgb(20, 20, 20);
+  border-right: 3px solid var(--pressed-right-border);
+}
+
+.DisplayExpression {
+  width: 98%;
+  height: 30%;
+  z-index: 99;
+  border: black;
+  display: flex;
+  justify-content: flex-end;
+}
+.DisplayResult {
+  width: 98%;
+  height: 50%;
+  border: black;
+  z-index: 99;
+  font-size: 34px;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.Mcontainer {
+  width: 98%;
+  height: 11%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: transparent;
+  position: relative;
+}
+
+.Mcontainer button {
+  width: 80%;
+  height: 95%;
+  background-color: var(--background);
+  border: none;
+  font-size: 22px;
+  border-top: 2px solid var(--top-border);
+  border-bottom: 2px solid var(--bottom-border);
+  border-left: 2px solid var(--left-border);
+  border-right: 2px solid var(--right-border);
+}
+
+.Mcontainer button:active {
+  border-top: 2px solid var(--pressed-top-border);
+  border-bottom: 2px solid var(--pressed-bottom-border);
+  border-left: 2px solid var(--pressed-left-border);
+  border-right: 2px solid var(--pressed-right-border);
+}
+
+.buttonClass {
+  width: 98%;
+  height: 80%;
+  display: flex;
+  flex-direction: row;
+}
+.primary {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+}
+
+.last-column {
+  width: 20%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: top;
+  background-color: transparent;
+  position: relative;
+}
+.col {
+  width: 100%;
+  height: 60%;
+  display: flex;
+  flex-direction: column;
+}
+.equals {
+  width: 100%;
+  height: 40%;
+  bottom: 0;
+}
+.Scontainer {
+  width: 100%;
+  height: 100%;
+  grid-template-columns: repeat(5, 1fr);
+}
+
+.container2 {
+  width: 80%;
+  height: 100%;
+  grid-template-columns: repeat(4, 1fr);
+}
+.container2 button:nth-last-child(3) {
+  grid-row: 5;
+  grid-column: 1/3;
 }
 .container2,
-.Scontainer{
-    display: grid;
-    justify-content: center;
-    align-items: center;
-    background-color: transparent;
-    position: relative;
-    top: 0px;
-    grid-auto-flow: dense;
+.Scontainer {
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  background-color: transparent;
+  position: relative;
+  top: 0px;
+  grid-auto-flow: dense;
 }
-
 
 .Scontainer button,
 .container2 button,
 .col button,
-.equals button{
-    width: 100%;
-    height: 100%;
-    background-color: var(--background);
-    border:none;
-    font-size: 16px;
-    border-top: 4px solid var(--top-border);
-    border-bottom: 4px solid var(--bottom-border);
-    border-left: 4px solid var(--left-border);
-    border-right: 4px solid var(--right-border);
+.equals button {
+  width: 100%;
+  height: 100%;
+  background-color: var(--background);
+  border: none;
+  font-size: 16px;
+  border-top: 4px solid var(--top-border);
+  border-bottom: 4px solid var(--bottom-border);
+  border-left: 4px solid var(--left-border);
+  border-right: 4px solid var(--right-border);
 }
-
 
 .container2 button:active,
 .Scontainer button:active,
 .last-column button:active,
-.equals button:active{
-    background-color: rgb(192, 192, 192);
-    border-top: 4px solid var(--pressed-top-border);
-    border-bottom: 4px solid var(--pressed-bottom-border);
-    border-left: 4px solid var(--pressed-left-border);
-    border-right: 4px solid var(--pressed-right-border);
+.equals button:active {
+  background-color: rgb(192, 192, 192);
+  border-top: 4px solid var(--pressed-top-border);
+  border-bottom: 4px solid var(--pressed-bottom-border);
+  border-left: 4px solid var(--pressed-left-border);
+  border-right: 4px solid var(--pressed-right-border);
 }
 
-#previewblank{
-    background-color: rgb(192, 192, 192);
-    border-top: 4px solid var(--pressed-top-border);
-    border-bottom: 4px solid var(--pressed-bottom-border);
-    border-left: 4px solid var(--pressed-left-border);
-    border-right: 4px solid var(--pressed-right-border);
+#previewblank {
+  background-color: rgb(192, 192, 192);
+  border-top: 4px solid var(--pressed-top-border);
+  border-bottom: 4px solid var(--pressed-bottom-border);
+  border-left: 4px solid var(--pressed-left-border);
+  border-right: 4px solid var(--pressed-right-border);
 }
-
